[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grccallers"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pysam",
    "pandas",
]

[project.scripts]
grccallers = "grccallers.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
